--- a/Practica/public_html/newcss.css
+++ b/Practica/public_html/newcss.css
@@ -53,7 +53,17 @@ header{
 }
 
 .contenedor .contenido{
-    grid-area: contenido
+    grid-area: contenido;
 }
 
-.contenedor
+.contenedor .sidebar{
+    grid-columns: 3/4;
+    background: blue;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100px;
+    grid-area: sidebar;
+    
+}
