--- a/Practica/public_html/newcss.css
+++ b/Practica/public_html/newcss.css
@@ -67,3 +67,8 @@ header{
     grid-area: sidebar;
     
 }
+.contenedor .footer{
+    background: #12203E;
+    color: #fff;
+    grid-area: footer;
+}
