--- a/Practica/public_html/newcss.css
+++ b/Practica/public_html/newcss.css
@@ -82,6 +82,15 @@ header{
     grid-area: footer;
 }
 
+@media screen and (max-width: 768px){
+    .contenedor {
+        grid-template-areas: "header header header"
+                                "contenido contenido contenido"
+                                "sidebar sidebar sidebar"
+                                "footer footer footer"
+    }
+}
+
 /* Estilos para el enlace3 y enlace4*/
 
 .contenedor2{
@@ -121,5 +130,14 @@ header{
 	background: #12203E;
 	color: #fff;
 	grid-area: footer;
+}
+
+@media screen and (max-width: 768px){
+    .contenedor2 {
+        grid-template-areas: "header header header"
+                                "contenido contenido contenido"
+                                "contenido contenido contenido"
+                                "footer footer footer"
+    }
 }
 
