--- a/Practica/public_html/newcss.css
+++ b/Practica/public_html/newcss.css
@@ -239,3 +239,37 @@ fieldset{
     padding: 5px;
     margin: 6px 4px;
 }
+
+
+/* Animacion*/
+
+
+.sidebar{
+    
+    background-color: red;
+    -webkit-animation-name: example; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 4s; /* Chrome, Safari, Opera */
+    animation-name: example;
+    animation-duration: 10s;
+
+}
+/* Chrome, Safari, Opera */
+ @-webkit-keyframes example {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+}
+
+/* Standard syntax */
+@keyframes example {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+}
+
+
+
+
+
